--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   liquid_swipe: ^3.1.0
   flutter_onboarding_slider: ^1.0.9
+  font_awesome_flutter: ^10.4.0
 
 dev_dependencies:
   flutter_test:
