--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   swipe_deck: ^1.1.0
   photo_card_swiper: ^0.0.6
   appinio_swiper: ^2.0.1
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
