--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   google_sign_in: '^4.5.1'
   flutter_facebook_auth: '^3.5.0'
   get_it: ^7.6.0
+  image_picker: ^1.0.0
 
 dev_dependencies:
   flutter_test:
