--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   get_it: ^7.6.0
   image_picker: ^1.0.0
   location: ^4.4.0
+  logger: ^1.4.0
 
 dev_dependencies:
   flutter_test:
