--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   image_picker: ^1.0.0
   location: ^4.4.0
   logger: ^1.4.0
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
