--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_progress_hud: ^2.0.2
   google_fonts: ^4.0.4
   hexcolor: ^3.0.1
+  percent_indicator: ^4.2.3
+  flutter_ruler_picker: ^1.0.3
 
 dev_dependencies:
   flutter_test:
