--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   flutter_ruler_picker: ^1.0.3
   swipeable_card_stack: ^0.0.5
   card_swiper: ^3.0.1
+  future_progress_dialog: ^0.2.1
+  fluttertoast: ^8.2.2
+  simple_fontellico_progress_dialog: ^0.3.0
 
 dev_dependencies:
   flutter_test:
